<resources>
    <string name="app_name">Hell Inc pro</string>
    <string name="theGameOver">Игра окончена.</string>
    <string name="setting">Настройки</string>
    <string name="contin">Продолжить.</string>
    <string name="save">Сохранить</string>
    <string name="exit">Выйти</string>
    <string name="start">Начать</string>
    <string name="ru">Русский.</string>
    <string name="en">English</string>
    <string name="close">Закрыть</string>
    <string name="mus">Настройки громкости</string>
    <string name="lang">Язык</string>
    <string name="intro_year">1980 год. Эпоха неограниченных возможностей. Время, когда человечество смотрело в будущее с дерзкой уверенностью.</string>
    <string name="intro_projectGates">Год, когда научный прорыв превзошел самые смелые фантазии... и самые жуткие кошмары. Проект \'Врата\', известный всему миру как большой адронный коллайдер, десятилетиями считавшийся безумной мечтой, стал реальностью.</string>
    <string name="intro_hellPassage">Ученые Европейской организации по ядерным и квантовым исследованиям (ЕОЯКИ) открыли проход. Не в космос. Не в параллельное измеремение, как мы себе представляли. Они открыли проход... в Ад.</string>
    <string name="intro_businessPotential">Вместо всеобщей паники и ужаса... мир бизнеса увидел... потенциал. Неограниченное пространство. Невероятные \'ресурсы\'. Идеальное место для расширения.</string>
    <string name="intro_skyscrapers">Так, среди пламени и серы, начали расти небоскребы. Панельные гиганты из стекла и бетона, населенные не демонами, а... менеджерами среднего звела, бухгалтерами и курьерами. Ад стал крупнейшим в мире офшором.</string>
    <string name="intro_hellInc">А главными игроками в этом новом, инфернальном деловом мире стали корпорации. Самая крупная и влиятельная из них? Конечно же... Hell Inc – гигант инфернальной бюрократии, поставок канцтоваров для загробной жизни и... ну, всякой адской ерунды.</string>
    <string name="intro_demonsFree">После десятка лет эксплуатации адских территорий демоны устали и вышли на свободу. Но это уже не ваша проблема. Ее можно будет решить позже, лет так через десять.</string>
    <string name="intro_yourGoal">Ваша же цель – работать не покладая рук, оформляя каждое малейшее действие каждой живой и мёртвой души. Пока, конечно, вы живы, и оставшиеся 70 лет будете работать в земной корпорации, а потом до конца жизни – в адской. Удачи вам и поздравляю с устройством в Jil Trade!!!</string>
    <string name="officeEnterBuilding">Вы берёте визитку и входите в офис: огромное монструозное здание на двести этажей вверх и четыреста вниз.</string>
    <string name="officeEnterElevator">Вы смотрите вправо и видите лифт, откуда выходит пещерный человек, воин времён монгольской империи и японский солдат второй мировой, и все с дипломатами и характерными браслетами, типичными для давно умерших людей.</string>
    <string name="officeGoUpstairs">Обернувшись налево, вы видите лифт, ведущий на верхние этажи, заходите в него и нажимаете кнопку сто двадцать седьмого этажа.</string>
    <string name="officeArriveFloor">Приехав на этаж, вы видите типичный офис за одним исключением: офис простирается на километры во все стороны.</string>
    <string name="officeNeedMap">Вы оглядываетесь по сторонам в поиске своего места, осознавая, что без карты тут явно не обойтись.</string>
    <string name="officeMeetNewbieHelper">Вдруг вы замечаете человека, который приближается к вам.</string>
    <string name="officeNewbieHelperDialogue">"Здравствуйте, видимо, вы новый работник. Провести ли вам инструктаж и показать ваше место, или вы сами справитесь, что маловероятно."</string>
    <string name="choiceAcceptHelp">Принять помощь</string>
    <string name="acceptHelpDecision">Приняв все за и против, вы понимаете, что сами вы не разберётесь, ведь вы вспомнили, что в брошюре читали про то, что в здании компании располагается более ста тридцати миллионов офисов.</string>
    <string name="acceptHelpReply">"ДА, я был бы не против помощи, глупо было бы потеряться в первый рабочий день."</string>
    <string name="acceptHelpResponse">"Отлично, это мудрое решение. Минимум пару тысяч работников теряются и умирают из-за незнания о передвижении офисов."</string>
    <string name="acceptHelpMovingOffices">"Передвижении офисов?"</string>
    <string name="acceptHelpCharlesIntro">"Да, да, таким образом можно собирать группы людей, не отрывая их от работы. Вижу по вашему бейджику, что вы работаете в секторе 18.22. Я как раз оттуда, мне поручили встретить новичка. Меня зовут Чарльз, будем знакомы."</string>
    <string name="acceptHelpShakeHands">Чарльз протянул вам руку, и вы её пожали.</string>
    <string name="acceptHelpWorkplace">Позже, через десять минут движения на офисном транспорте (вы были очень удивлены, узнав, что каждому работнику выделяют транспорт для передвижения по офису), вы прибыли на своё рабочее место: небольшая комнатка в пять квадратов, опрятного вида с компьютером, принтером и пультом управления – ЦИТС (цифровая информационно-транспортная система).</string>
    <string name="acceptHelpStartWork">Чарльз попрощался с вами, и вы приступили к работе.</string>
    <string name="choiceDeclineHelp">Отказаться от помощи</string>
    <string name="declineHelpDecision">Вы обдумываете все за и против, и решаете, что сами разберётесь:</string>
    <string name="declineHelpYourself">"Извините, но я сам, что я не найду своё место среди пары сотен офисов даже без карты."</string>
    <string name="declineHelpManagerReply">"Спешу вас огорчить, но на этом этаже только двести сотен тысяч офисов, и без карты даже самый опытный сотрудник не разберётся."</string>
    <string name="declineHelpLost">Вы резко замираете в ступоре от осознания размеров офиса, и после некоторых раздумий вы решаете попросить помощи, но тот сотрудник уже скрылся, да и вы не заметили, как идя за ним, вы забрели непонятно куда.</string>
    <string name="declineHelpNoResponse">Вы ходите между бесконечными офисами и просите помочь, но никто не отзывается – все заняты чем-то, но точно не вами.</string>
    <string name="declineHelpPanic">Паника одолевает вас, но резко краем глаза вы замечаете лифт. "Победа!" – думаете вы, но вдруг одна из стен офисов начинает двигаться в вашу сторону.</string>
    <string name="declineHelpCrushed">Вы пытаетесь убежать, но и другая стена начинает давить на вас. Медленно, но верно, вас раздавливает в кашицу.</string>
    <string name="declineHelpLastThoughts">Ваши последние мысли были лишь об одном: "Я засужу этих уродов, когда вновь воскресну в Аду."</string>
    <string name="declineHelpPancakeEnding">Но законы мироздания оказались против вас: Без цельного тела вы не воскреснете, а станете лишь духом и, скорее всего, будете привязаны к убившему вас офису. (Концовка "Лепёшки")</string>
    <string name="workMonthAssignment">Вы отлично работали целый месяц, и до становления лучшим работником этажа вам оставалось одно задание.</string>
    <string name="workMonthCITSCall">Вы как обычно поднялись на этаж, доехали до своей ячейки, обыденно поздоровались с Чарльзом, ставшим для вас другом, и сели за свой компьютер, как вдруг поступил звонок на ЦИТС:</string>
    <string name="workMonthBelomoryeContract">"– Требуется согласование контрактов по проекту "Беломорье" с представителями компании DreamNest."</string>
    <string name="workMonthQuestion">Приняв задание, у вас возник вопрос: что за Беломорье и причём тут DreamNest, ведь эта самая компания уже как двадцать лет банкрот, ведь рухнула после распада СССР.</string>
    <string name="workMonthSearchOnline">Конечно, вы сразу же полезли в интернет, чтобы изучить этот вопрос, и наткнулись на очень интересную статью:</string>
    <string name="workMonthArticleDreamnest">"– Компания Dreamnest, или же НИИ квантовой пространственной инженерии Карнатского (НИИ КПИК). Институт был создан в 1992 за пять лет до распада СССР с целью повторения успеха ЕОЯКИ (Европейской организации по ядерным и квантовым исследованиям) в изучении новых пространств.</string>
    <string name="workMonthArticleBelomorye">В 1997 году закрыто после неудачного эксперимента под кодовым названием Беломорье, уничтожившего Каспийское море и потянувшего за собой весь союз. Через пять лет НИИ КПИК был выкуплен российским бизнесменом и преобразован в коммерческую организацию Dreamnest. Сейчас эта компания активно сотрудничает с монополистом рынка адской эксплуатации Hell Inc и через посредников, и по слухам, пытается повторить проект Беломорье."</string>
    <string name="workMonthPersonalShock">Вы пребываете в некотором шоке, ведь сорок лет назад вы лишились должности на одном иранском предприятии, ведь в один ужасный день, а именно 7 сентября 1997, Тегеран был стёрт с лица земли, как и десятки других городов, находящихся рядом с Каспийским морем.</string>
    <string name="workMonthPersonalCatastrophe">Вам повезло, ведь в тот день вы были на конференции, когда ужасный толчок сотряс Анкару. Через час всему миру стало известно, что Тегеран был разрушен, также как и ваша карьера, да и все родственники погибли тогда.</string>
    <string name="workMonthChoiceText">После того как ужасы прошлого отступили, у вас возник лишь один вопрос: желаете ли вы узнать о той катастрофе, или же забыть прошлое и продолжить работать?</string>
    <string name="choiceGoWithCharles">Пойти с Чарльзом (Забыть прошлое)</string>
    <string name="goWithCharlesDecision">Это лишь воспоминания сорокалетней давности. Что было, того не изменить. Вы заполняете документы, оформляете встречи, не трогая документы, которые не описаны в плане. Позже на перерыве вы встречаетесь с Чарльзом:</string>
    <string name="goWithCharlesCharlesGreeting">"– Привет! Вижу, работы у тебя много, но ты справишься, уверен, и станешь наконец лучшим работником этажа. Так как я уже знаю, что ты им станешь, предлагаю отпраздновать это в пяти километрах от офиса."</string>
    <string name="goWithCharlesCharlesRescue">Вам очень нравится эта идея, но вы резко вспоминаете про работу и решаете спросить совет у Чарльза. Но обеденный перерыв окончен, и вам вновь пора на работу. По окончанию дня вы, не дожидаясь Чарльза, идёте к лифту, нажимаете на кнопку вызова, дожидаетесь его, уже делаете шаг, но резко вас хватают за плечо и разворачивают:</string>
    <string name="goWithCharlesLiftWarning">"– Глаза разуй, не видишь, шахта лифта пустая, ты мог упасть и лететь почти полтора километра вниз, ты хотел бы такой смерти?"</string>
    <string name="goWithCharlesSaved">Это был Чарльз. Он спас вас от превращения в лепёшку. Вы, конечно, в ступоре, ведь не понимаете, как не заметили отсутствие лифта, но не печальтесь, в офисе более сотни лифтов.</string>
    <string name="goWithCharlesExit">Вы выходите из офиса вместе с Чарльзом и направляетесь к остановке общественного транспорта.</string>
    <string name="goWithCharlesNextDay">После этого шокирующего и травмирующего "мотивационного выступления" вы возвращаетесь в свою комнату. Страх и отчаяние сдавливают грудь, но сон не приходит. Ваше сознание отказывается смириться с увиденным и с тем фактом, что это теперь ваша "работа". Утро не приносит облегчения, начинается очередной бесконечный рабочий день.</string>
    <string name="goWithCharlesStorageEvent">Но вдруг вас останавливает Чарльз: "– Я тут вспомнил, что нет смысла ждать, если можно поехать на служебном транспорте, и так как я работаю здесь уже давно, у меня есть ключ от центра логистики, где можно взять машину."</string>
</resources>