<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/menuButtonsLayout"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="32dp"
        android:background="#DD000000">
        <TextView
            android:id="@+id/mainMenuTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="@string/app_name"
            android:textColor="@color/green_primary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/font"
            android:shadowColor="#FF000000"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="5" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/font" />

        <Button
            android:id="@+id/continueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contin"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/font" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/font" />

        <Button
            android:id="@+id/exitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:fontFamily="@font/font" />
    </LinearLayout>


    <ImageView
        android:id="@+id/mainMenuImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toEndOf="@+id/menuButtonsLayout"
        android:scaleType="centerCrop"
        android:fontFamily="@font/font"
        android:src="@drawable/menu_image"
        android:contentDescription="@string/app_name" />





    <FrameLayout
        android:id="@+id/settingsOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CC000000"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#FFFFFFFF"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginBottom="24dp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/font" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mus"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/font" />

            <SeekBar
                android:id="@+id/musicVolumeSlider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="50"
                android:layout_marginBottom="24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lang"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/font" />

            <RadioGroup
                android:id="@+id/languageRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="24dp">
                <RadioButton
                    android:id="@+id/radioRu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ru"
                    android:checked="true"
                    android:layout_marginEnd="16dp"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/font" />
                <RadioButton
                    android:id="@+id/radioEn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/en"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/font" />
            </RadioGroup>

            <Button
                android:id="@+id/closeSettingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/close"
                android:fontFamily="@font/font" />
        </LinearLayout>
    </FrameLayout>

</RelativeLayout>