<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    tools:context=".GameActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75">

        <ImageView
            android:id="@+id/gameImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/menu_image"
            android:contentDescription="@string/app_name" />


        <LinearLayout
            android:id="@+id/choiceButtonsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="24dp"
            android:gravity="center"
            android:visibility="gone">

        </LinearLayout>


        <ImageButton
            android:id="@+id/inGameSettingsButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="top|start"
            android:layout_margin="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/setting"
            android:contentDescription="@string/setting"
             />

    </FrameLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:background="#1A1A1A"
        android:padding="16dp">

    <TextView
        android:id="@+id/storyTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/intro_year"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:fontFamily="@font/font"
        android:scrollbars="vertical"
        android:gravity="top" />

</RelativeLayout>


<FrameLayout
android:id="@+id/inGameSettingsOverlay"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#CC000000"
android:visibility="gone">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start|center_vertical"
    android:background="#DD000000"
    android:orientation="vertical"
    android:padding="32dp"
    android:gravity="center">

    <Button
        android:id="@+id/saveGameButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/font"/>

    <Button
        android:id="@+id/continueGameButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/contin"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/font"/>

    <Button
        android:id="@+id/exitToMenuButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:fontFamily="@font/font"/>
</LinearLayout>
</FrameLayout>

    </LinearLayout>